# shaderlock

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  shader.vert.spv  shaderlock.daemon
examples/: screencopy.rs
resources/: icon.frag  icon.vert
shaders/: desaturate_fade.frag  shader.frag  vertical_band_slide.frag
src/: async_winit.rs  authenticator.rs  callback_utils.rs  graphics.rs  lib.rs  locker.rs  main.rs  monitor.rs  screencopy.rs  screengrab.rs  utils.rs  window_manager.rs
src/graphics/: bg.rs  icon.rs
