[package]
name = "shaderlock"
description = "Wayland (wlroots) screenlocker with GPU shaders"
version = "0.2.0"
authors = ["Robin McCorkell <robin@mccorkell.me.uk>"]
license = "MIT"
edition = "2018"

[dependencies]
winit = "0.27.3"
async-std = { version = "1.7.0", features = ["attributes"] }
env_logger = "0.10.0"
log = "0.4.11"
wgpu = "0.6.0"
futures = "0.3.8"
sctk = {package = "smithay-client-toolkit", version = "0.16.0"}
cgmath = "0.18.0"
bytemuck = "1.4.1"
shaderc = "0.8.0"
glob = "0.3.0"
rand = "0.8.4"
anyhow = "1.0.34"
image = "0.24.3"
pam = "0.7.0"
users = "0.11.0"
arrayvec = "0.7.2"
sd-notify = "0.4.1"
clap = { version = "4.0.27", features = ["derive"] }
wgpu-mipmap = "0.1.0"
actix = "0.13.0"
actix-rt = "2.2.0"
tokio = "1.9.0"

[build-dependencies]
shaderc = "0.8.0"
glob = "0.3.0"
