[package]
name = "shaderlock"
description = "Wayland (wlroots) screenlocker with GPU shaders"
version = "0.3.0"
authors = ["Robin McCorkell <robin@mccorkell.me.uk>"]
license = "MIT"
edition = "2018"

[dependencies]
winit = "0.30.5"
env_logger = "0.11.5"
log = "0.4.11"
wgpu = { version = "22.1.0", features = ["spirv"] }
futures = "0.3.8"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
cgmath = "0.18.0"
bytemuck = "1.4.1"
shaderc = "0.10.1"
glob = "0.3.0"
rand = "0.9.2"
anyhow = "1.0.34"
pam = "0.8.0"
users = "0.11.0"
arrayvec = "0.7.2"
sd-notify = "0.4.1"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.9.0", features = ["full"] }
pollster = "0.4.0"
dashmap = "6.1.0"
either = "1.13.0"
image = "0.25.5"

[build-dependencies]
shaderc = "0.10.1"
glob = "0.3.0"
